[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gd-plug-ui/scene/plugin_settings/PluginSettings.gd" type="Script" id=1]

[node name="gd-plug" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 0.9
columns = 3
column_titles_visible = true
hide_root = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 60.0

[node name="InitBtn" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 238.0
margin_top = 20.0
margin_right = 272.0
margin_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Init"

[node name="UpdateBtn" type="OptionButton" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 474.0
margin_top = 20.0
margin_right = 549.0
margin_bottom = 40.0
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Update"
items = [ "Update", null, false, 1, null, "Update (Production)", null, false, 2, null, "Update (Force)", null, false, 3, null ]
selected = 0

[connection signal="pressed" from="MarginContainer/HBoxContainer/InitBtn" to="." method="_on_Init_pressed"]
